feat: update appointment status handling and enhance repository with status filtering